--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </form> 
     <nav>
         <ul>
-          <li><a href="/index.html">Trang chủ</a></li>
-          <li><a href="/zalo_verifierGiMt5f3fPWvDv-SFflLT3tFms0IVZWXVCpS.html">Verifier</a></li>
+          <li><a href="index.html">Trang chủ</a></li>
+          <li><a href="zalo_verifierGiMt5f3fPWvDv-SFflLT3tFms0IVZWXVCpS.html">Verifier</a></li>
         </ul>
       </nav>
 
